# neutron-lbaas-dashboard

./: .coveragerc  .eslintrc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  package.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  reference.rst  usage.rst
neutron_lbaas_dashboard/: __init__.py  karma.conf.js  post_install.sh
neutron_lbaas_dashboard/api/: __init__.py  lbaasv2.py
neutron_lbaas_dashboard/api/rest/: __init__.py  barbican.py  lbaasv2.py  nlbaasv2.py
neutron_lbaas_dashboard/dashboards/project/loadbalancersv2/: exceptions.py  panel.py  tables.py  tabs.py  urls.py  views.py
neutron_lbaas_dashboard/dashboards/project/loadbalancersv2/templates/loadbalancersv2/: _detail_overview.html  _launch_lb_help.html  _monitor_create.html  _monitor_help.html  _ssl_cert_help.html  detail.html  index.html  launch.html  launch_lb.html  port_config.html  ssl_cert.html  update.html  update_lb_step.html  update_ssl_cert.html
neutron_lbaas_dashboard/dashboards/project/loadbalancersv2/workflows/: __init__.py  create_lb.py  update_lb.py
neutron_lbaas_dashboard/dashboards/project/ngloadbalancersv2/: __init__.py  panel.py  urls.py  views.py
neutron_lbaas_dashboard/enabled/: _1480_project_loadbalancersv2_panel.py  _1481_project_ng_loadbalancersv2_panel.py
neutron_lbaas_dashboard/locale/de/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/en_GB/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/fr/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/id/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/ja/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/ko_KR/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/pt_BR/LC_MESSAGES/: django.po
neutron_lbaas_dashboard/locale/ru/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/tr_TR/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/locale/zh_CN/LC_MESSAGES/: django.po  djangojs.po
neutron_lbaas_dashboard/static/app/core/openstack-service-api/: barbican.service.js  barbican.service.spec.js  lbaasv2.service.js  lbaasv2.service.spec.js  nlbaasv2.service.js  nlbaasv2.service.spec.js
neutron_lbaas_dashboard/static/dashboard/project/lbaasv2/: lbaasv2.module.js  lbaasv2.module.spec.js  lbaasv2.scss
neutron_lbaas_dashboard/static/dashboard/project/nlbaasv2/: nlbaasv2.module.js  nlbaasv2.module.spec.js  nlbaasv2.scss
neutron_lbaas_dashboard/tests/: settings.py  test_neutron_lbaas_dashboard.py  urls.py
neutron_lbaas_dashboard/tests/integration_tests/: horizon.conf
neutron_lbaas_dashboard/tests/integration_tests/tests/: test_loadbalancers.py
neutron_lbaas_dashboard/tests/unit/: registration.py
playbooks/legacy/neutron-lbaas-dashboard-nodejs4-npm-run-lint/: post.yaml  run.yaml
playbooks/legacy/neutron-lbaas-dashboard-nodejs4-npm-run-test/: run.yaml
releasenotes/notes/: bp-horizon-lbaas-v2-ui-ba7e4c97a0460f85.yaml  fix-auth-url-barbican-client-87530b5626810544.yaml  neutron-lbaas-dashboard-deprecation-a3c910ababba8e78.yaml
tools/: tox_install.sh
tools/gate/integration/: commons  post_test_hook.sh  pre_test_hook.sh
zuul.d/: jobs.yaml  projects.yaml
(+302 files in other folders)
