[metadata]
name = neutron-lbaas-dashboard
summary = Horizon panels for Neutron LBaaS
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/developer/neutron-lbaas-dashboard/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    neutron_lbaas_dashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py
    neutron_lbaas_dashboard/tests
    neutron_lbaas_dashboard/enabled
    neutron_lbaas_dashboard/locale
    neutron_lbaas_dashboard/static
    neutron_lbaas_dashboard/post_install.sh
    neutron_lbaas_dashboard/karma.conf.js
autodoc_index_modules = False
warnerrors = True
autodoc_exclude_modules =
    neutron_lbaas_dashboard.tests.*
    neutron_lbaas_dashboard.enabled.*
api_doc_dir = contributor/modules
